<resources>
    <string name="app_name">EcommerceApp</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="quality">It is now very easy to reach the\nbest quality among all the\nproducts on the Internet!</string>
    <string name="start">Start</string>
    <string name="kleine">Kleine</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="let_s_login">Let\'s Login</string>
    <string name="dont_have_account">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="let_s_register">Let\'s Register</string>
    <string name="have_account">Do you have an account? Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_description">We will send you the password reset link to your email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="reset_link_sent">Password reset link has been sent to your email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search_now">Search Now</string>
    <string name="best_deals">Best Deals</string>
    <string name="best_products">Best Products</string>
    <string name="old_price_sample">$2000</string>
    <string name="scotch_premium">Scotch Premium</string>
    <string name="new_price_sample">$1600</string>
    <string name="see_product">See product</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="chair">Chair</string>
    <string name="product_description">Product description</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="check_out">Check out</string>
    <string name="your_shopping_cart_is_empty">Your shopping cart is empty</string>
    <string name="addresses">Addresses</string>
    <string name="address_location_ex_home">Address location Ex: Home</string>
    <string name="full_name">Full Name</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone">Phone</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="billing">Billing</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="payment_types">App dose not support virtual payments. You can pay when you receive your order.</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="place_order">Place Order</string>
    <string name="my_account">My account</string>
    <string name="forgot_change_password">Forgot/Change password</string>
    <string name="all_orders">All orders</string>
    <string name="no_orders_to_show">No orders to show</string>
    <string name="address">Address</string>
    <string name="products">Products</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="edit_personal_details">Edit personal details</string>
    <string name="orders">Orders</string>
    <string name="track_orders">Track Orders</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Regional</string>
    <string name="logout">Logout</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="update">Update</string>
</resources>