<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/g_card_background"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="88dp">

        <ImageView
            android:id="@+id/img_best_deal"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_deal_product_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/scotch_premium"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_best_deal"
            app:layout_constraintTop_toTopOf="@id/img_best_deal" />

        <TextView
            android:id="@+id/tv_new_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display"
            android:text="@string/new_price_sample"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@id/tv_deal_product_name"
            app:layout_constraintTop_toBottomOf="@id/tv_deal_product_name" />

        <TextView
            android:id="@+id/tv_old_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/sf_pro_display"
            android:text="@string/old_price_sample"
            android:textColor="@color/g_gray700"
            android:textSize="11sp"
            app:layout_constraintStart_toEndOf="@id/tv_new_price"
            app:layout_constraintTop_toBottomOf="@id/tv_deal_product_name" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_see_product"
            android:layout_width="83dp"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/blue_background"
            android:fontFamily="@font/poppins_light"
            android:text="@string/see_product"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_deal_product_name"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>