<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="230dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/g_card_background"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/img_ad"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_ad_name"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/poppins_thin"
            android:text="@string/scotch_premium"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_ad"
            app:layout_constraintTop_toTopOf="@id/img_ad" />

        <TextView
            android:id="@+id/tv_ad_price"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display"
            android:text="@string/new_price_sample"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tv_ad_name"
            app:layout_constraintTop_toBottomOf="@id/tv_ad_name" />

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_add_to_cart"
            android:layout_width="77dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_background"
            android:fontFamily="@font/poppins_light"
            android:text="@string/add_to_cart"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ad_price" />

        <LinearLayout
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@drawable/icon_background"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_favorite" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>